implement modal add to favorites

--- a/src/global.scss
+++ b/src/global.scss
@@ -116,6 +116,14 @@
   border-radius: 0.5em;
 }
 
+.modal-add-to-favorite .modal-wrapper {
+  height: 42%;
+  width: 80%;
+  position: absolute;
+  display: block;
+  border-radius: 0.5em;
+}
+
 .font-md {
   font-size: 13px;
 }
