--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -1,5 +1,5 @@
-<ion-card class="ion-no-border" [routerLink]="['/product/detail/1']">
-  <ion-card-header class="ion-no-padding">
+<ion-card class="ion-no-border">
+  <ion-card-header class="ion-no-padding" [routerLink]="['/product/detail/1']">
     <img src="https://via.placeholder.com/200.png" class="full-width" />
   </ion-card-header>
 
@@ -9,7 +9,7 @@
         <ion-text class="product-name">Alpukat Mentega </ion-text>
       </ion-col>
       <ion-col size="2" class="ion-text-right">
-        <ion-icon name="list"></ion-icon>
+        <ion-icon name="list" (click)="addToFavorite()"></ion-icon>
       </ion-col>
 
       <ion-col size="12">
