--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -1,7 +1,29 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>cart</ion-title>
+    <ion-title>{{'MY_CART' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
+    <ion-row class="ion-justify-content-between">
+      <ion-col size="12">
+        <app-cart-list [cartData]="cartList" (quantityChange)="updateTotalPrice($event)"></app-cart-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+<ion-footer class="ion-no-border ion-padding-horizontal">
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="6">
+        <span>{{'TOTAL_PRICE' | translate}}</span> <br />
+        <span><b>Rp. {{totalPrice | number}}</b></span>
+      </ion-col>
+      <ion-col size="6" class="ion-text-right">
+        <ion-button> {{'CHECKOUT' | translate}} </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-footer>
