--- a/src/app/pages/login/login-form/login-form.component.html
+++ b/src/app/pages/login/login-form/login-form.component.html
@@ -11,14 +11,26 @@
   <ion-grid class="ion-padding-top">
     <ion-row>
       <ion-col size="12" class="ion-no-padding">
-        <form (ngSubmit)="login()" #loginForm="ngForm">
+        <form (ngSubmit)="login()" #loginForm="ngForm" [formGroup]="fg">
           <ion-item lines="none" class="form-group">
             <ion-label position="stacked">Email</ion-label>
-            <ion-input class="default-theme" required placeholder="{{ 'YOUR_EMAIL_ADDRESS' | translate }}"></ion-input>
+            <ion-input
+              class="default-theme"
+              formControlName="email"
+              placeholder="{{ 'YOUR_EMAIL_ADDRESS' | translate }}"
+            ></ion-input>
+            <small *ngIf="fg.controls.email.dirty">{{ fg.controls.email.errors?.required?.message }}</small>
+            <small *ngIf="fg.controls.email.dirty">{{ fg.controls.email.errors?.email?.message }}</small>
           </ion-item>
           <ion-item lines="none" class="padding-form" class="form-group">
             <ion-label position="stacked">Password</ion-label>
-            <ion-input class="default-theme" required placeholder="{{ 'YOUR_PASSWORD' | translate }}"></ion-input>
+            <ion-input
+              class="default-theme"
+              formControlName="password"
+              placeholder="{{ 'YOUR_PASSWORD' | translate }}"
+              type="password"
+            ></ion-input>
+            <small *ngIf="fg.controls.password.dirty">{{ fg.controls.password.errors?.required?.message }}</small>
           </ion-item>
         </form>
       </ion-col>
