implement modal select location

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
           <ion-col size="12" class="ion-no-padding location-title ion-padding-top ion-padding-end"
             >{{'STORE_LOCATION' | translate}}</ion-col
           >
-          <ion-col size="12" class="ion-padding-end">
+          <ion-col size="12" class="ion-padding-end" (click)="changeLocation()">
             <ion-row class="ion-no-padding">
               <ion-col size="4" size-sm class="ion-no-padding">
                 <ion-icon name="location"></ion-icon>
