--- a/src/app/shared/common/cards/card-brand/card-brand.component.html
+++ b/src/app/shared/common/cards/card-brand/card-brand.component.html
@@ -1,6 +1,12 @@
 <ion-row>
   <ion-col class="ion-text-center ion-padding-vertical">
-    <img src="https://via.placeholder.com/80.png" class="rounded" />
-    <ion-text class="brand-name">Brand Name</ion-text>
+    <ion-row>
+      <ion-col size="12">
+        <img src="https://via.placeholder.com/80.png" class="rounded" />
+      </ion-col>
+      <ion-col size="12">
+        <ion-text class="brand-name">Brand Name</ion-text>
+      </ion-col>
+    </ion-row>
   </ion-col>
 </ion-row>
