--- a/src/app/shared/common/cards/card-category/card-category.component.html
+++ b/src/app/shared/common/cards/card-category/card-category.component.html
@@ -1,6 +1,12 @@
 <ion-row>
   <ion-col class="ion-text-center ion-padding-vertical" (click)="goToProductByCategory('CategoryId')">
-    <img src="https://via.placeholder.com/50.png" class="rounded" />
-    <ion-text class="category-name">Category</ion-text>
+    <ion-row>
+      <ion-col size="12">
+        <img src="https://via.placeholder.com/50.png" class="rounded" />
+      </ion-col>
+      <ion-col size="12">
+        <ion-text class="category-name">Category</ion-text>
+      </ion-col>
+    </ion-row>
   </ion-col>
 </ion-row>
