integrate api banner, featured brand, bundling & category to homepage

--- a/src/app/pages/home/home-brands/home-brands.component.html
+++ b/src/app/pages/home/home-brands/home-brands.component.html
@@ -11,6 +11,6 @@
 </ion-row>
 <ion-row>
   <ion-col>
-    <app-slide-brand></app-slide-brand>
+    <app-slide-brand [brands]="brands"></app-slide-brand>
   </ion-col>
 </ion-row>
