--- a/src/app/shared/common/slide-brand/slide-brand.component.html
+++ b/src/app/shared/common/slide-brand/slide-brand.component.html
@@ -1,5 +1,5 @@
-<ion-slides pager="false" [options]="slideOpts" class="slide-product">
-  <ion-slide *ngFor="let item of [1, 2, 3, 4, 5, 6]">
-    <app-card-brand></app-card-brand>
+<ion-slides pager="false" [options]="slideOpts" class="slide-product" *ngIf="brands && brands.length">
+  <ion-slide *ngFor="let item of brands">
+    <app-card-brand [brand]="item"></app-card-brand>
   </ion-slide>
 </ion-slides>
