--- a/src/app/pages/home/home-categories/home-categories.component.html
+++ b/src/app/pages/home/home-categories/home-categories.component.html
@@ -1,5 +1,5 @@
 <ion-row class="ion-no-padding">
-  <ion-col class="ion-no-padding" size="3" *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8]">
-    <app-card-category></app-card-category>
+  <ion-col class="ion-no-padding" size="3" *ngFor="let item of categories">
+    <app-card-category [category]="item"></app-card-category>
   </ion-col>
 </ion-row>
