--- a/src/app/shared/common/cards/card-brand/card-brand.component.html
+++ b/src/app/shared/common/cards/card-brand/card-brand.component.html
@@ -2,10 +2,11 @@
   <ion-col class="ion-text-center ion-padding-vertical">
     <ion-row>
       <ion-col size="12">
-        <img src="https://via.placeholder.com/80.png" class="rounded" />
+        <img [src]="brand.image_url" class="brand-icon rounded" *ngIf="brand.image_url" />
+        <img src="https://via.placeholder.com/80.png" class="brand-icon rounded" *ngIf="!brand.image_url" />
       </ion-col>
       <ion-col size="12">
-        <ion-text class="brand-name">Brand Name</ion-text>
+        <ion-text class="brand-name">{{ brand.name }}</ion-text>
       </ion-col>
     </ion-row>
   </ion-col>
