--- a/src/app/shared/common/cards/card-category/card-category.component.html
+++ b/src/app/shared/common/cards/card-category/card-category.component.html
@@ -2,10 +2,11 @@
   <ion-col class="ion-text-center ion-padding-vertical" (click)="goToProductByCategory('CategoryId')">
     <ion-row>
       <ion-col size="12">
-        <img src="https://via.placeholder.com/50.png" class="rounded" />
+        <img [src]="category.image_url" class="cat-icon rounded" *ngIf="category.image_url" />
+        <img src="https://via.placeholder.com/50.png" class="cat-icon rounded" *ngIf="!category.image_url" />
       </ion-col>
       <ion-col size="12">
-        <ion-text class="category-name">Category</ion-text>
+        <ion-text class="category-name">{{ category.name }}</ion-text>
       </ion-col>
     </ion-row>
   </ion-col>
