--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -1,21 +1,26 @@
 <ion-card class="ion-no-border">
-  <ion-card-header class="ion-no-padding" [routerLink]="['/product/detail/1']">
-    <img src="https://via.placeholder.com/200.png" class="full-width" />
+  <ion-card-header class="ion-no-padding" [routerLink]="['/product/detail', product?.product_id]">
+    <img [src]="product?.image_url" class="product-img full-width" *ngIf="product?.image_url" />
+    <img src="https://via.placeholder.com/200.png" class="product-img full-width" *ngIf="!product?.image_url" />
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding ion-text-left">
     <ion-row>
       <ion-col size="10" class="truncate">
-        <ion-text class="product-name">Alpukat Mentega </ion-text>
+        <ion-text class="product-name">{{ product?.name }} </ion-text>
       </ion-col>
       <ion-col size="2" class="ion-text-right">
         <ion-icon name="list" (click)="addToFavorite()"></ion-icon>
       </ion-col>
 
       <ion-col size="12">
-        <p class="product-size">250gr/pcs</p>
-        <p class="product-price">Rp 25.000</p>
-        <p class="product-final-price">Rp 20.000 <span> /pcs</span></p>
+        <p class="product-size">{{ product?.weight }}gr/pcs</p>
+        <p class="product-price" [ngClass]="{ 'price-linethrough': product?.discounted_price }">
+          Rp {{ product?.price | number: '1.0-0':'id' }}
+        </p>
+        <p class="product-final-price" *ngIf="product?.discounted_price">
+          Rp {{ product?.discounted_price | number: '1.0-0':'id' }} <span> /pcs</span>
+        </p>
       </ion-col>
     </ion-row>
   </ion-card-content>
