--- a/src/app/pages/home/home-bundling/home-bundling.component.html
+++ b/src/app/pages/home/home-bundling/home-bundling.component.html
@@ -3,7 +3,9 @@
     <ion-text class="section-title">{{ bundling.name }}</ion-text>
   </ion-col>
   <ion-col size="4" class="ion-text-right">
-    <ion-text class="section-see-all">{{ 'SEE_ALL' | translate }}</ion-text>
+    <ion-text class="section-see-all link" [routerLink]="['/bundling', bundling?.bundling_id, 'detail']">
+      {{ 'SEE_ALL' | translate }}
+    </ion-text>
   </ion-col>
   <ion-col size="12" class="ion-padding-top">
     <ion-text class="section-desc">{{ 'FRESH_GROCERIES_DESC' | translate }}</ion-text>
