--- a/src/app/pages/product/product-list/product-list.component.html
+++ b/src/app/pages/product/product-list/product-list.component.html
@@ -13,7 +13,7 @@
   <ion-toolbar *ngIf="!search">
     <ion-buttons slot="start" mode="md">
       <ion-back-button defaultHref="/tabs/home"> </ion-back-button>
-      <ion-title>{{ title }}</ion-title>
+      <ion-title class="header-title">{{ title }}</ion-title>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="searchProduct()">
@@ -30,13 +30,17 @@
   <ion-grid class="ion-no-padding">
     <ion-row class="ion-no-padding" *ngIf="!search">
       <ion-col class="ion-no-padding">
-        <app-slide-promo [banners]="banners"></app-slide-promo>
+        <img [src]="category?.image_url" class="full-width img-header" />
       </ion-col>
     </ion-row>
-    <ion-row class="padding-product">
-      <ion-col size="4" *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8]">
-        <app-card-product></app-card-product>
+    <ion-row class="padding-product" *ngIf="products && products.length">
+      <ion-col size="4" *ngFor="let item of products">
+        <app-card-product [product]="item"></app-card-product>
       </ion-col>
+    </ion-row>
+
+    <ion-row class="padding-product" *ngIf="!products || (products && !products.length)">
+      <ion-col class="ion-text-center"> Data Not Found </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
