--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -4,7 +4,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="fetchUserData($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-grid class="ion-no-padding">
     <ion-row class="ion-padding-horizontal ion-align-items-center">
       <ion-col size="2">
@@ -13,10 +16,10 @@
       <ion-col size="7">
         <ion-row>
           <ion-col size="12">
-            <ion-text color="dark"> NAME </ion-text>
+            <ion-text color="dark">{{userData?.full_name}} </ion-text>
           </ion-col>
           <ion-col size="12" size="small"
-            ><ion-text color="medium"> <small>email@email.com</small> </ion-text></ion-col
+            ><ion-text color="medium"> <small>{{userData?.email}}</small> </ion-text></ion-col
           >
         </ion-row>
       </ion-col>
