--- a/src/app/pages/address/address.page.html
+++ b/src/app/pages/address/address.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
-    <ion-buttons slot="start">
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="start" mode="md">
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>{{'ADDRESS_LIST' | translate}}</ion-title>
@@ -16,7 +16,9 @@
         </span>
       </ion-col>
       <ion-col size="6" class="ion-text-right">
-        <small [routerLink]="['/address/form']"><b>+ {{'ADD_NEW_ADDRESS' | translate}}</b></small>
+        <ion-text color="primary">
+          <small [routerLink]="['/address/form']"><b>+ {{'ADD_NEW_ADDRESS' | translate}}</b></small>
+        </ion-text>
       </ion-col>
     </ion-row>
     <ion-row>
