--- a/src/app/shared/common/cards/card-address/card-address.component.html
+++ b/src/app/shared/common/cards/card-address/card-address.component.html
@@ -1,11 +1,16 @@
 <ng-container *ngFor="let address of addressList; let i = index">
-  <ion-card class="ion-border ion-no-margin ion-margin-bottom" (click)="onAddressClick(address?.address_id)">
+  <ion-card
+    class="ion-border ion-no-margin ion-margin-bottom card-address"
+    (click)="onAddressClick(address?.address_id)"
+  >
     <ion-card-content>
       <ion-row>
         <ion-col size="12">
-          <span
-            ><b>{{ address?.address_name }}</b></span
-          >
+          <ion-text color="dark">
+            <span
+              ><b>{{ address?.address_name }}</b></span
+            >
+          </ion-text>
           <br />
           <span>{{ address?.address }}</span>
         </ion-col>
@@ -13,9 +18,11 @@
 
       <ion-row>
         <ion-col size="12">
-          <span
-            ><b>{{ 'ADDRESS_DETAIL' | translate }}</b></span
-          >
+          <ion-text color="dark">
+            <span
+              ><b>{{ 'ADDRESS_DETAIL' | translate }}</b></span
+            >
+          </ion-text>
           <br />
           <small>{{ address?.address_detail ? address?.address_detail : '-' }}</small>
         </ion-col>
@@ -23,7 +30,15 @@
 
       <ion-row *ngIf="showButton">
         <ion-col size="12">
-          <ion-button expand="block" [disabled]="address?.selected" (click)="onUseAddress(i, $event)">
+          <ion-button
+            expand="block"
+            shape="round"
+            color="primary"
+            fill="outline"
+            size="small"
+            [disabled]="address?.selected"
+            (click)="onUseAddress(i, $event)"
+          >
             {{ address?.selected ? ('SELECTED' | translate) : ('USE_ADDRESS' | translate) }}
           </ion-button>
         </ion-col>
