--- a/src/app/pages/qr/qr.page.html
+++ b/src/app/pages/qr/qr.page.html
@@ -1,13 +1,12 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar color="success">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>QR</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="success" [fullscreen]="true">
   <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
     <ion-row class="ion-justify-content-between">
       <ion-col size="12" class="ion-no-padding">
@@ -23,12 +22,12 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-button expand="block" (click)="changeMode('scan')" [disabled]="!isShow">
+        <ion-button expand="block" shape="round" (click)="changeMode('scan')" [disabled]="!isShow">
           {{'SCAN_QR' | translate}}
         </ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button expand="block" (click)="changeMode('show')" [disabled]="isShow">
+        <ion-button expand="block" shape="round" (click)="changeMode('show')" [disabled]="isShow">
           {{'SHOW_QR' | translate}}
         </ion-button>
       </ion-col>
