--- a/src/app/pages/qr/show-qr/show-qr.component.html
+++ b/src/app/pages/qr/show-qr/show-qr.component.html
@@ -1,5 +1,23 @@
 <ion-row>
   <ion-col size="12" class="ion-text-center">
-    <ngx-qrcode [elementType]="'url'" [value]="'www.google.com'" errorCorrectionLevel="L" [scale]="100"></ngx-qrcode>
+    <ion-text color="light">
+      <h3>{{ 'YOUR_QR_CODE' | translate }}</h3>
+    </ion-text>
+  </ion-col>
+  <ion-col size="12">
+    <ion-card class="card-qr">
+      <ion-card-content>
+        <ion-row>
+          <ion-col size="12" class="ion-text-center">
+            <ngx-qrcode
+              [elementType]="'url'"
+              [value]="'www.google.com'"
+              errorCorrectionLevel="L"
+              [scale]="90"
+            ></ngx-qrcode>
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
   </ion-col>
 </ion-row>
