ion select styling

--- a/src/global.scss
+++ b/src/global.scss
@@ -253,3 +253,9 @@ ion-searchbar {
   height: 10px;
   background-color: #eeeeee;
 }
+
+.alert-wrapper {
+  .alert-radio-group {
+    border: none;
+  }
+}
