--- a/src/app/pages/address/address.page.html
+++ b/src/app/pages/address/address.page.html
@@ -8,6 +8,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="fetchAddressList($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
     <ion-row class="ion-justify-content-between ion-align-items-center">
       <ion-col size="6">
