--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -55,10 +55,15 @@
       </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col size="12" class="ion-text-center">
+    <ion-row class="ion-text-center">
+      <ion-col size="12">
         <ion-text color="medium">
           <small>App Version {{currentVersion}}</small>
+        </ion-text>
+      </ion-col>
+      <ion-col size="12" class="ion-padding-top">
+        <ion-text color="danger" (click)="logout()">
+          <small><b>Log Out</b></small>
         </ion-text>
       </ion-col>
     </ion-row>
